加了中文翻译

--- a/lyrics/君はロックを聴かない.md
+++ b/lyrics/君はロックを聴かない.md
@@ -1,149 +1,179 @@
-君はロックを聴かない (不听摇滚的你) - あいみょん
-词：あいみょん
-曲：あいみょん
+君はロックを聴かない (不听摇滚的你) - あいみょん  
+词：あいみょん  
+曲：あいみょん  
 
 ---
 
-sukoshi sabi shi so ona kimi ni
-少し寂しそうな君に
+sukoshi sabi shi so ona kimi ni  
+少し寂しそうな君に  
+看起来有点寂寞的你  
 
-kon na uta wo kika se yoo
-こんな歌を聴かせよう
+kon na uta wo kika se yoo  
+こんな歌を聴かせよう  
+来听听这首歌吧  
 
-tewota taku aizu
-手を叩く合図
+tewota taku aizu  
+手を叩く合図  
+拍拍手当作暗号  
 
-zatsu na sapura izu
-雑なサプライズ
+zatsu na sapura izu  
+雑なサプライズ  
+有点随便的惊喜  
 
-boku nari no seii ppai
-僕なりの精一杯
+boku nari no seii ppai  
+僕なりの精一杯  
+已尽我的最大努力  
 
-hokori mamire do onatsuban niwa
-埃まみれ ドーナツ盤には
+hokori mamire do onatsuban niwa  
+埃まみれ ドーナツ盤には  
+沾满灰尘的黑胶唱片上  
 
-ano hi no yume ga odo ru
-あの日の夢が踊る
+ano hi no yume ga odo ru  
+あの日の夢が踊る  
+那天的梦想在舞动  
 
-majimeni hariwo otosu 
-真面目に針を落とす
+majimeni hariwo otosu  
+真面目に針を落とす  
+认真的放下唱针  
 
-ikiwo tome sugi taze
-息を止めすぎたぜ
+ikiwo tome sugi taze  
+息を止めすぎたぜ  
+太过屏气凝神了  
 
-saa koshi wo oro shite yo
-さあ腰を下ろしてよ
+saa koshi wo oro shite yo  
+さあ腰を下ろしてよ  
+让我们坐下来吧  
 
-futsu futsu to narida susei shun no oto
-フツフツと鳴り出す青春の音
+futsu futsu to narida susei shun no oto  
+フツフツと鳴り出す青春の音  
+断断续续传来青春的音乐  
 
-kawai ta merodi de odo ro oyo
-乾いたメロディで踊ろうよ
+kawai ta merodi de odo ro oyo  
+乾いたメロディで踊ろうよ  
+用这个干涸的旋律起舞吧  
 
-kimi wa rokku nanka kika nai
-君はロックなんか聴かない
+kimi wa rokku nanka kika nai  
+to omoi nagara  
+君はロックなんか聴かない  
+と思いながら  
+虽然我想，你根本不听摇滚  
 
-to omoi nagara
-と思いながら
+sukoshi demo boku ni  
+chika zuite hoshi kute  
+少しでも僕に近づいてほしくて  
+但又希望你能稍微与我亲近一点  
 
-sukoshi demo boku ni
-chika zuite hoshi kute
-少しでも僕に近づいてほしくて
+rokku nanka kika nai  
+to omo ukeredomo  
+ロックなんか聴かない  
+と思うけれども  
+虽然我想，你根本不听摇滚  
 
-rokku nanka kika nai
-ロックなんか聴かない
+boku wa konna uta de anna uta de  
+koi wo nori koe tekita  
+僕はこんな歌であんな歌で  
+恋を乗り越えてきた  
+但我就是靠着这些那些的歌曲
+度过了每一段恋爱
 
-to omo ukeredomo
-と思うけれども
+boku no shin zoo no bpm wa  
+hya ku kyuu juu ni na ttazo  
+僕の心臓のBPMは  
+１９０になったぞ  
+我的心率已经变成190
 
-boku wa konna uta de anna uta de
-僕はこんな歌であんな歌で
+kimi wa kizuku nokai  
+君は気づくのかい?  
+你是否注意到了  
 
-koi wo nori koe tekita
-恋を乗り越えてきた
+naze ima wara un dai  
+なぜ今笑うんだい?  
+为什么现在笑了出来  
 
-boku no shin zoo no bpm wa
-僕の心臓のBPMは
+uso mitai ni oyo gume  
+嘘みたいに泳ぐ目  
+如同撒谎一般游离的双眼  
 
-hya ku kyuu juu ni na ttazo
-１９０になったぞ
+dara dara to nagareru sei shun no oto  
+ダラダラと流れる青春の音  
+源源流淌而出青春的声音  
 
-kimi wa kizuku nokai
-君は気づくのかい?
+kawai ta merodi wa yama na ize  
+乾いたメロディは止まないぜ  
+干涸的旋律将永不停歇  
 
-naze ima wara un dai
-なぜ今笑うんだい?
+kimi wa rokku nanka kika nai  
+to omoi nagara  
+君はロックなんか聴かない  
+と思いながら  
+虽然我想，你根本不听摇滚  
 
-uso mitai ni oyo gume
-嘘みたいに泳ぐ目
+ato sukoshi boku ni chika zuite hoshikute  
+あと少し僕に近づいてほしくて  
+但又希望你能再与我亲近一点  
 
-dara dara to nagareru sei shun no oto
-ダラダラと流れる青春の音
+rokku nanka kika nai  
+to omo ukeredomo  
+ロックなんか聴かない  
+と思うけれども  
+虽然我想，你根本不听摇滚  
 
-kawai ta merodi wa yama na ize
-乾いたメロディは止まないぜ
+boku wa konna uta de anna uta de  
+僕はこんな歌であんな歌で  
+但我就是因为这些那些歌  
 
-kimi wa rokku nanka kika nai
-君はロックなんか聴かない
+koi ni koga rete ki tan da  
+恋に焦がれてきたんだ  
+而对恋爱产生了期待  
 
-to omoi nagara
-と思いながら
+kimi ga rokku nanka kika nai koto  
+shi tteru kedo  
+君がロックなんか聴かないこと  
+知ってるけど  
+虽然我知道，你根本不听摇滚  
 
-ato sukoshi boku ni chika zuite hoshikute
-あと少し僕に近づいてほしくて
+koibi tono yoo ni yorisotte hoshikute  
+恋人のように寄り添ってほしくて  
+但又希望我们能像恋人一般相依相偎  
 
-rokku nanka kika nai
-ロックなんか聴かない
+rokku nanka kika nai  
+to omo ukere domo  
+ロックなんか聴かない  
+と思うけれども  
+虽然我想，你根本不听摇滚  
 
-to omo ukeredomo
-と思うけれども
+boku wa konna uta de anna uta de  
+僕はこんな歌であんな歌で  
+但我就是因为这些那些的歌  
 
-boku wa konna uta de anna uta de
-僕はこんな歌であんな歌で
+mata mune ga itain da  
+また胸が痛いんだ  
+心中仍感到阵阵痛楚  
 
-koi ni koga rete ki tan da
-恋に焦がれてきたんだ
+kimi wa rokku nanka kika nai  
+to omoi nagara  
+君はロックなんか聴かない  
+と思いながら  
+虽然我想，你根本不听摇滚  
 
-kimi ga rokku nanka kika nai koto
-君がロックなんか聴かないこと
+sukoshi demo boku ni chika zuite hoshi kute  
+少しでも僕に近づいてほしくて  
+但又希望你能稍微与我亲近一点  
 
-shi tteru kedo
-知ってるけど
+rokku nanka kika nai  
+to omo ukere domo  
+ロックなんか聴かない  
+と思うけれども  
+虽然我想，你根本不听摇滚  
 
-koibi tono yoo ni yorisotte hoshikute
-恋人のように寄り添ってほしくて
+boku wa konna uta de anna uta de  
+僕はこんな歌であんな歌で  
+但我就是用这样的歌、那样的歌
 
-rokku nanka kika nai
-ロックなんか聴かない
+koi wo nori koe tekite  
+恋を乗り越えてきた  
+度过了每一段恋爱  
 
-to omo ukere domo
-と思うけれども
-
-boku wa konna uta de anna uta de
-僕はこんな歌であんな歌で
-
-mata mune ga itain da
-また胸が痛いんだ
-
-kimi wa rokku nanka kika nai
-君はロックなんか聴かない
-
-to omoi nagara
-と思いながら
-
-sukoshi demo boku ni chika zuite hoshi kute
-少しでも僕に近づいてほしくて
-
-rokku nanka kika nai
-ロックなんか聴かない
-
-to omo ukere domo
-と思うけれども
-
-boku wa konna uta de anna uta de
-僕はこんな歌であんな歌で
-
-koi wo nori koe tekite
-恋を乗り越えてきた
-koi wo nori koe tekite
-恋を乗り越えてきた
+koi wo nori koe tekite  
+恋を乗り越えてきた  
+度过了每一段恋爱  
